# gRPC-cpp-python

./: Dockerfile  README.md  image.ppm  message.proto  start.sh
cpp/: CMakeLists.txt  client.cpp
py/: server.py
